Fix more -Wreturn-type warnings https://bugs.webkit.org/show_bug.cgi?id=227497

Unreviewed. This is getting stupid.

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2021-06-29

* page/EventHandler.cpp:
(WebCore::EventHandler::scrollDistance):
(WebCore::EventHandler::handleKeyboardScrolling):
* page/KeyboardScroll.cpp:
(WebCore::unitVectorForScrollDirection):

Canonical link: https://commits.webkit.org/239244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279379 268f45cc-cd09-0410-ab3c-d52691b4dbfc